# quadrotor

./: .gitignore  Cargo.toml  Makefile.toml  README.md  nrf52840.svd
.github/workflows/: build.yml  ci.yml
assets/: task_relationships.drawio
hil_test/: conftest.py  requirements.txt  test_ble.py
quadrotor-firmware/: Cargo.toml  memory.x  rust-toolchain.toml
quadrotor-firmware/src/: battery.rs  ble_server.rs  controller.rs  datatypes.rs  dps310.rs  fxas21002.rs  fxos8700.rs  lib.rs  main.rs  motor.rs  persistent_data.rs  status_led.rs  usb_serial.rs  xerror.rs
quadrotor-x/: Cargo.toml  rust-toolchain.toml
quadrotor-x/src/: accel.rs  datatypes.rs  lib.rs  sensor_fusion.rs  utils.rs
r4-firmware/: Cargo.toml  memory.x  rust-toolchain.toml
r4-firmware/.cargo/: config.toml
r4-firmware/src/: ble_server.rs  lib.rs  main.rs
r4-x/: Cargo.toml  rust-toolchain.toml
r4-x/src/: fmt.rs
tools/: gen_test_values.py  requirements.txt  telemetry_viewer.py  utils.py
tools/control_interface/: __main__.py  gamepad.py
tools/cross_compile/: Dockerfile  README.md
tools/hil_test/: conftest.py  test_ble.py
tools/telemetry_viewer/: __main__.py  plot.py  rot_viz.py
