[workspace]

resolver = "2"

members = [
  "quadrotor-firmware",
  "quadrotor-x",
]

[patch.crates-io]
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }

embedded-cli = { git = "https://github.com/aloebs29/embedded-cli-rs" }

[profile.release]
debug = 2
