[package]
name = "quadrotor-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
quadrotor-x = { path = "../quadrotor-x", default-features = false, features = ["defmt"] }

embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
nrf-softdevice = { version = "0.1.0", features = ["defmt",  "nrf52840", "s140", "ble-peripheral", "ble-gatt-server", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.2" }

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2" }
heapless = "0.8.0"
bitfield-struct = "0.6"
micromath = { version = "2.1.0", features = ["quaternion", "vector"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
