[package]
name = "quadrotor-x"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
defmt = [
    "dep:defmt",
]

[dependencies]
micromath = { version = "2.1.0", features = ["quaternion", "vector"] }
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.*", default-features = false }

defmt = { version = "0.3", optional = true }

[dev-dependencies]
assert_float_eq = "1.1" 