[package]
name = "r4-x"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
defmt = [
    "dep:defmt",
]

[dependencies]
micromath = { version = "2.1.0", features = ["quaternion", "vector"] }

defmt = { version = "0.3", optional = true }

[dev-dependencies]
assert_float_eq = "1.1" 